# veidesbot_ros_example

./: .gitmodules  CHANGELOG.md  README.md
veidesbot_control/: CMakeLists.txt  package.xml
veidesbot_control/config/: control.yaml
veidesbot_control/launch/: control.launch
veidesbot_description/: CMakeLists.txt  package.xml
veidesbot_description/urdf/: macros.xacro  veidesbot.gazebo  veidesbot.xacro
veidesbot_gazebo/: CMakeLists.txt  package.xml  veidesbot.rviz
veidesbot_gazebo/launch/: full.launch  full_nogui.launch
veidesbot_gazebo/worlds/: veidesbot.world
veidesbot_platform/: CMakeLists.txt  package.xml  setup.py
veidesbot_platform/launch/: veidesbot.launch
veidesbot_platform/msg/: ShutdownMethod.msg
veidesbot_platform/nodes/: veidesbot_platform_node
veidesbot_platform/src/veidesbot_platform/: __init__.py  states.py
veidesbot_platform/srv/: ShutdownMethodCompleted.srv
