<?xml version="1.0"?>
<package format="2">
  <name>veidesbot_control</name>
  <version>0.1.0</version>
  <description>Configuration for VeidesBot controller</description>

  <maintainer email="contact@veides.io">Veides Team</maintainer>
  <author email="contact@veides.io">Veides Team</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
</package>
